# open-knowledge-document

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: test.yml
docs/adr/: 0001-document-model-evaluation.md
examples/: minimal-document.json
schemas/: open-knowledge-document-v0.1.schema.json
src/open_knowledge_document/: __init__.py  cli.py  exclusions.py  feishu_client.py  server.py  storage.py
src/open_knowledge_document/converters/: __init__.py  feishu.py
tests/: test_admin_api.py  test_exclusions.py  test_feishu_client.py  test_feishu_converter.py  test_schema.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json
web/src/: App.tsx  App.vue  api.ts  main.ts  sample.ts  styles.css  types.ts
